# clasi

./: .gitignore  PROJECT.md  PROYECTO.md  README.md  REVIEWS_1.1.md  REVIEWS_1.2.md  Revisiones_1.1.md  Revisiones_1.2.md  install.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: evaluation-report.md  test-report.md
config/: exclusions.yaml  hints.yaml
src/: classifier.py  cli.py  discovery.py  evaluator.py  executor.py  extractor.py
src/clasi/: __init__.py  __main__.py  classifier.py  cli.py  discovery.py  evaluator.py  executor.py  extractor.py  init.py  scanner.py
src/clasi/config/: carpetas_genericas.yaml  exclusions.yaml
tests/: test_classifier.py  test_discovery.py  test_entornos.py  test_executor.py  test_init.py  test_pipeline.py
