[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clasi"
version = "0.1.0"
description = "Clasificador automático de archivos que aprende de tu estructura de carpetas"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "mutagen>=1.45",
    "Pillow>=10.0",
    "pytesseract>=0.3",
]

[project.scripts]
clasi = "clasi.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clasi = ["config/*.yaml"]
